# MaterialBench

./: .gitattributes  .gitignore  .gitmodules  LICENSE  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/komarudude/materialbench/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cpu_crypto.cpp  cpu_math.cpp  gemm_shader_tiled.comp  ram_seq.cpp  rom_random.cpp  rom_seq.cpp  shader.comp  utils.cpp  utils.h  vulkan_compute.cpp
app/src/main/java/com/komarudude/materialbench/: BenchScores.kt
app/src/main/java/com/komarudude/materialbench/ui/: BenchActivity.kt  MainActivity.kt
app/src/main/java/com/komarudude/materialbench/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/komarudude/materialbench/utils/: ApiService.kt  BitmapUtils.kt  IntegrityChecker.kt  LiteRTTools.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/komarudude/materialbench/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
